--- a/Project/views/user/otppage.ejs
+++ b/Project/views/user/otppage.ejs
@@ -87,6 +87,7 @@
                     <input type="number" name="number" id="form3Example4" class="form-control" />
                     <label class="form-label" for="form3Example4">Enter your number</label>
                   </div>
+                  <p id="error-msg"  style="color:rgb(182, 13, 13) "><%=number%></p>
                     <!-- Submit button -->
                     <button type="submit" class="btn btn-primary btn-block mb-4">
                         Get OTP
