--- a/Project/views/admin/addBanner.ejs
+++ b/Project/views/admin/addBanner.ejs
@@ -10,7 +10,7 @@
                     <section class="col-md-12 col-lg-12 ml-auto mb-2">
                         <div class="container   mt-4">
                             <div class="row d-flex justify-content-center  ">
-                                <div class="col-md-4 -">
+                                <div class="col-md-6">
                                     <h2 class="text-center">Add banner </h2>
                                     <form action="/admin/banner" class=" pt-2 ml-auto" id="banner21"
                                         enctype="multipart/form-data" method="post">
@@ -23,7 +23,7 @@
                                         <br>
                                         <label class="form-label " for="desc">description for banner</label>
                                         <input type="text" class="d-block" name="desc" id="desc">
-                                        <select class="form-select form-select-lg mb-3" name="category">
+                                        <select class="form-select  mb-3" name="category">
                                             <%categories.forEach((element)=>{%>
                                             <option value="<%=element.name%>">
                                                 <%=element.name%>
