--- a/Project/views/admin/category.ejs
+++ b/Project/views/admin/category.ejs
@@ -33,11 +33,8 @@
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
                                         <button class="btn btn-primary" onclick="addcategory()" type="submit">submit</button>
-
                                     </div>
-
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -78,7 +75,7 @@
                                             <div class="modal fade" id="staticBackdrop<%=i%>" data-bs-backdrop="static"
                                                 data-bs-keyboard="false" tabindex="-1"
                                                 aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                                                <div class="modal-dialog">
+                                                <div class="modal-dialog ">
                                                     <div class="modal-content">
                                                         <div class="modal-header">
                                                             <h5 class="modal-title" id="staticBackdropLabel">edit offer
@@ -86,7 +83,7 @@
                                                             <button type="button" class="btn-close"
                                                                 data-bs-dismiss="modal" aria-label="Close"></button>
                                                         </div>
-                                                        <div class="mb-3">
+                                                        <div class="mb-3 ms-4 me-4">
                                                             <label class="col-form-label">offer:</label>
                                                             <input  class="form-control" name="offer" id="edit<%=i%>" value="<%=element._id%>" hidden>
 
@@ -104,6 +101,7 @@
                                         </td>
                                         <td><a href="/admin/edit-category/<%=element._id%>" class="btn btn-info"
                                                 id="sweet">Edit</a></td>
+                                        
 
                                         <td><a href="/admin/delete-category/<%=element._id%>" class="btn btn-warning"
                                                 id="sweet"
@@ -146,7 +144,6 @@
                     }
 
                 }
-                // })
             })
         }
 
