--- a/Project/views/admin/edit-product.ejs
+++ b/Project/views/admin/edit-product.ejs
@@ -2,37 +2,35 @@
 <%-include('../partials/sidebarAdmin.ejs')%>
 <div class="container">
     <div class="col-sm-6 col-sm-offset-3">
-    
-        <h1>Add Product</h1>
         <!-- LOGIN FORM -->
         <form action="/admin/edit-product/<%=data._id%>" method="post" enctype="multipart/form-data">
             <div class="form-group">
-                <label class="fs-4">Name</label>
-                <input type="text" class="form-control fs-4" name="name" value="<%=data.name%>">
+                <label >Name</label>
+                <input type="text" class="form-control " name="name" value="<%=data.name%>">
             </div>
 
             <div class="form-group">
-                <label class="fs-4">Description</label>
-                <input type="text" class="form-control fs-4" name="description" value="<%=data.description%>">
+                <label >Description</label>
+                <input type="text" class="form-control " name="description" value="<%=data.description%>">
             </div>
-            <label for="cars" class="fs-4">Category:</label>
+            <label for="cars" >Category:</label>
             <br><br>
-            <select class="form-select form-select-lg mb-3"  name="category">
+            <select class="form-select  mb-3"  name="category">
                <%categories.forEach((element)=>{%>
                 <option value="<%=element.name%>"><%=element.name%></option> 
                <%})%>
              </select>
             <br><br>
             <div class="form-group">
-                <label class="fs-4">Price</label>
-                <input type="text" class="form-control fs-4" name="price" value="<%=data.price%>">
+                <label >Price</label>
+                <input type="text" class="form-control" name="price" value="<%=data.price%>">
             </div>
             <div class="form-group">
                 <label for="">Image</label>
-                <img  src="/static/product-image/<%=data._id%>.jpg" style="width:100px;height:auto;" alt="" id="imgView">
-                <input type="file" class="form-control fs-4 " name="image" value="" onchange="viewImage(event)">
+                <img  src="/static/product-image/<%=data._id%>.jpg" style="width:100px;height:auto;" alt="" id="imgView" >
+                <input type="file" class="form-control " name="image" value="" onchange="viewImage(event)" required>
             </div>
-            <button type="submit" class="btn btn-warning btn-lg fs-4">Update</button>
+            <button type="submit" class="btn btn-warning">Update</button>
         </form>
     
         <hr>    
