--- a/Project/views/partials/navUser.ejs
+++ b/Project/views/partials/navUser.ejs
@@ -1,4 +1,6 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
@@ -31,22 +33,20 @@
                 </li>
                 <li class="nav-item px-2 py-2">
                     <a class="nav-link text-uppercase text-dark" href="#special">specials</a>
-                </li  >
-                    <a href="/cart" class=" btn btn-primary mt-3 ms-2 ">cart</a>
-                    <!-- <span class="badge badge-light">
-                        <%=cartCount%>
-                    </span> -->
-             
-                 <a href="/wishlist" class="fa fa-heart  btn btn-primary mt-3 ms-2"></a>
+                </li>
+                
+                <a href="/cart" class=" btn btn-primary mt-4 ms-2 ">cart</a>
+
+                <a href="/wishlist" class="fa fa-heart  btn btn-primary mt-4 ms-2"></a>
 
 
-                <a href="/profile" class="fa-solid fa-user btn btn-primary mt-3 ms-2 "></a>
+                <a href="/profile" class="fa-solid fa-user btn btn-primary mt-4 ms-2 "></a>
                 <%if (token) { %>
-                    <a href="logout" class="btn btn-primary mt-3 ms-2 ">
+                    <a href="logout" class="btn btn-primary mt-4 ms-2 ">
                         Logout
                     </a>
                     <% }else{ %>
-                        <a href="login" class="btn btn-primary mt-3 ms-2 ">
+                        <a href="login" class="btn btn-primary mt-4 ms-2 ">
                             Login
                         </a>
                         <%}%>
