--- a/Project/views/user/login.ejs
+++ b/Project/views/user/login.ejs
@@ -17,7 +17,7 @@
 
   <!-- google sign in -->
   <meta name="google-signin-client_id" content="225477678393-rbc9qhsd171ljc7p9infql54fnpm63os.apps.googleusercontent.com">
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
 
 </head>
 
@@ -90,9 +90,12 @@
 
                 <!-- Email input -->
                 <div class="form-outline mb-4">
-                  <input type="email" name="email" id="form3Example3" class="form-control" value="<%=nameval%>" />
+                  <input type="email" name="email" id="emailid" class="form-control" value="" onkeyup="validateEmail()" />
                   <label class="form-label" for="form3Example3" n>Email address</label>
+                 
+
                 </div>
+                <span id="emailid-err" class="text-danger"></span>
                 <p id="error-msg" class="fs-6" style="color:rgb(170, 47, 76) ">
                   <%=eamilError%>
                 </p>
@@ -100,15 +103,16 @@
 
                 <!-- Password input -->
                 <div class="form-outline mb-4">
-                  <input type="password" name="password" id="form3Example4" class="form-control" />
+                  <input type="password" name="password" id="password" class="form-control" onkeyup="validatepassword()"/>
                   <label class="form-label" for="form3Example4">Password</label>
                 </div>
+                <span id="password-err" class="text-danger"></span>
                 <p id="error-msg" class="fs-6" style="color:rgb(169, 40, 53) ">
                   <%=passwordError%>
                 </p>
 
-                <div id="emailmsg" class="fs-6" style="color:rgb(158, 44, 19);display:none">Please fill the required
-                </div>
+                <!-- <div id="emailmsg" class="fs-6" style="color:rgb(158, 44, 19);display:none">Please fill the required
+                </div> -->
 
                 <!-- Checkbox -->
                 <div class="form-check d-flex justify-content-center mb-4">
@@ -117,9 +121,9 @@
                     Remember Me!
                   </label>
                 </div>
-
+                <span id="valideee" class="text-danger"></span>
                 <!-- Submit button -->
-                <button type="submit" class="btn btn-primary btn-block mb-4">
+                <button type="submit" class="btn btn-primary btn-block mb-4" onclick="return validatelogin()">
                   Login
                 </button>
 
@@ -134,11 +138,7 @@
                   <a href="signup" class="btn btn-outline-danger">Create new</a>
                 </div>
 
-                <!-- Register buttons -->
-                <div class="text-center ">
-                  <p>or sign up with:</p>
-                  <div class="g-signin2" data-onsuccess="onSignIn"></div>
-                  
+                
                 </div>
               </form>
             </div>
@@ -150,10 +150,10 @@
   <!-- Section: Design Block -->
 
 
-
+<script src="/static/javascripts/valid.js"></script>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.4.0/mdb.min.js"></script>
-  <script src="/static/javascripts/validate.js"></script>
+  <!-- <script src="/static/javascripts/validate.js"></script> -->
   <!-- <a href="#" onclick="signOut();">Sign out</a> -->
   <script>
     function onSignIn(googleUser) {
