fixed many bugs

--- a/Project/public/stylesheets/main.css
+++ b/Project/public/stylesheets/main.css
@@ -37,6 +37,14 @@ body{
     -webkit-box-shadow: 0 3px 9px 3px rgba(0, 0, 0, 0.1);
             box-shadow: 0 3px 9px 3px rgba(0, 0, 0, 0.1);
 }
+.navbar .nav-ul {
+    display: flex !important;
+    align-items: center !important;
+}
+.navbar .nav-ul a {
+    margin: 0 0.5rem !important;
+    padding: 0.3rem 2rem !important;
+}
 .navbar-brand img{
     width: 30px;
 }
