--- a/Project/views/user/signup.ejs
+++ b/Project/views/user/signup.ejs
@@ -107,14 +107,14 @@
   
                 <!-- Email input -->
                 <div class="form-outline mb-4">
-                  <input name="email" type="email" id="emailid" class="form-control" onclick="validateEmail()"/>
+                  <input name="email" type="email" id="emailid" class="form-control" onkeyup="validateEmail()"/>
                   <label class="form-label" for="form3Example3">Email address</label>
                 </div>  
                 <span id="emailid-err" class="text-danger"></span>
 
                 <!-- number input -->
                 <div class="form-outline mb-4">
-                  <input name="number" type="number" id="mobilenumber" class="form-control" onclick="validatemobile()" />
+                  <input name="number" type="number" id="mobilenumber" class="form-control" onkeyup="validatemobile()" />
                   <label class="form-label" for="form3Example3">Phone number</label>
                 </div>
                 <span id="mobilenumber-err" class="text-danger"></span>
