--- a/Project/views/user/otppage.ejs
+++ b/Project/views/user/otppage.ejs
@@ -84,12 +84,14 @@
               <form action="/sendotp" method="post" id="signup">
                 <!-- enter number -->
                 <div class="form-outline mb-4">
-                    <input type="number" name="number" id="form3Example4" class="form-control" />
+                    <input type="number" name="number" id="mobilenumber" class="form-control" onkeyup="validatemobile()"/>
                     <label class="form-label" for="form3Example4">Enter your number</label>
                   </div>
+                  <span id="mobilenumber-err" class="text-danger"></span>
                   <p id="error-msg"  style="color:rgb(182, 13, 13) "><%=number%></p>
                     <!-- Submit button -->
-                    <button type="submit" class="btn btn-primary btn-block mb-4">
+                    <span id="otpvalid" class="text-danger"></span>
+                    <button type="submit" class="btn btn-primary btn-block mb-4" onclick="return validateOTP()">
                         Get OTP
                     </button>
               </form>
@@ -101,6 +103,7 @@
   </section>
   <!-- Section: Design Block -->
 
+  <script src="/static/javascripts/valid.js"></script>
   <!-- MDB -->
 <script
 type="text/javascript"
