--- a/Project/views/user/productDetails.ejs
+++ b/Project/views/user/productDetails.ejs
@@ -12,47 +12,47 @@
   <div class="container pt-10">
     <div class="row">
       <%data.forEach((data)=>{%>
-      <div class="col-md-5">
-        <!-- card left -->
-        <div class="product-imgs">
-          <div class="img-display">
-            <div class="img-showcase mt-5 zoom img-container" id="img-container" style="width: 500pxl;">
-              <img src="/static/product-image/<%=data._id%>.jpg" alt="">
+        <div class="col-md-5">
+          <!-- card left -->
+          <div class="product-imgs">
+            <div class="img-display">
+              <div class="img-showcase mt-5 zoom img-container" id="img-container" style="width: 500pxl;">
+                <img id="zoom" src="/static/product-image/<%=data._id%>.jpg" alt="">
+              </div>
             </div>
-          </div>
-          <div class="img-select">
-            <div class="img-item">
-              <a href="#" data-id="1">
+            <div class="img-select">
+              <div class="img-item">
+
                 <img src="/static/product-image/<%=data._id%>.jpg" alt="shoe image">
-              </a>
-            </div>
-            <div class="img-item">
-              <a href="#" data-id="2">
+
+              </div>
+              <div class="img-item">
+
                 <img src="/static/product-image/<%=data._id%>1.jpg" alt="shoe image">
-              </a>
-            </div>
-            <div class="img-item">
-              <a href="#" data-id="3">
+
+              </div>
+              <div class="img-item">
+
                 <img src="/static/product-image/<%=data._id%>2.jpg" alt="shoe image">
-              </a>
-            </div>
-            <div class="img-item">
-              <a href="#" data-id="4">
+
+              </div>
+              <div class="img-item">
+
                 <img src="/static/product-image/<%=data._id%>3.jpg" alt="shoe image">
-              </a>
+
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-7">
-       
-        <!-- card right -->
-        <div class="product-content">
-          <h2 class="product-title">
-            <%=data.name%>
-          </h2>
-          <a href="#" class="product-link">visit store</a>
-          <!-- <div class = "product-rating">
+        <div class="col-md-7">
+
+          <!-- card right -->
+          <div class="product-content">
+            <h2 class="product-title">
+              <%=data.name%>
+            </h2>
+            <a href="#" class="product-link">visit store</a>
+            <!-- <div class = "product-rating">
           <i class = "fas fa-star"></i>
           <i class = "fas fa-star"></i>
           <i class = "fas fa-star"></i>
@@ -61,52 +61,47 @@
           <span>4.7(21)</span>
         </div> -->
 
-          <div class="product-price">
-            <p class="new-price">Price:
-              <%if(data.offer===0){%> 
-              <span class="fw-bold d-block text-success">
-              Rs.<%=parseInt(data.price - (data.price * data.offer/100))%> </span> 
-              <%}else{%>
-              <span class="fw-bold d-block text-success"><del class="text-danger">Rs:<%=data.price%></del>
-              Rs.<%=parseInt(data.price - (data.price * data.offer/100))%>
-              </span>
-              <%}%>
-            </p>
-          </div>
+            <div class="product-price">
+              <p class="new-price">Price:
+                <%if(data.offer===0){%>
+                  <span class="fw-bold d-block text-success">
+                    Rs.<%=parseInt(data.price - (data.price * data.offer/100))%> </span>
+                  <%}else{%>
+                    <span class="fw-bold d-block text-success"><del class="text-danger">Rs:<%=data.price%></del>
+                      Rs.<%=parseInt(data.price - (data.price * data.offer/100))%>
+                    </span>
+                    <%}%>
+              </p>
+            </div>
 
-          <div class="product-detail">
-            <h2>about this item: </h2>
-            <p>
-              <%=data.description%>
-            </p>
-            <ul>
-              <li>Color: <span>Black</span></li>
-              <li>Available: <span>in stock</span></li>
-              <li>Category: <span>
-                  <%=data.category%>
-                </span></li>
-            </ul>
-          </div>
+            <div class="product-detail">
+              <h2>about this item: </h2>
+              <p>
+                <%=data.description%>
+              </p>
+              <ul>
+                <li>Color: <span>Black</span></li>
+                <li>Available: <span>in stock</span></li>
+                <li>Category: <span>
+                    <%=data.category%>
+                  </span></li>
+              </ul>
+            </div>
 
-          <div class="purchase-info">
-            <!-- <a href = "/add-to-cart/" class = "btn btn-primary mt-3">ADD TO CART</a> -->
-            <button class="btn btn-primary mt-3" onclick="addToCart(`<%=data._id%>`)">ADD TO CART</button>
+            <div class="purchase-info">
+              <!-- <a href = "/add-to-cart/" class = "btn btn-primary mt-3">ADD TO CART</a> -->
+              <button class="btn btn-primary mt-3" onclick="addToCart(`<%=data._id%>`)">ADD TO CART</button>
 
+            </div>
           </div>
+          <%})%>
         </div>
-        <%})%>
-      </div>
 
     </div>
   </div>
 
 
-  <div class="card-wrapper">
-    <div class="card">
-
-
-    </div>
-  </div>
+  <script src="/static/javascripts/zoomsl.min.js"></script>
   <script>
     function addToCart(proId) {
       $.ajax({
@@ -132,8 +127,20 @@
 
     }
   </script>
-
   <script>
+    $(document).ready(function () {
+      $('.img-item img').click(function () {
+        var image = $(this).attr('src');
+        $('.img-showcase img').attr('src', image)
+      })
+    })
+
+    $('#zoom').imagezoomsl({
+      zoomrange: [4, 4]
+    })
+
+  </script>
+  <!-- <script>
     var options = {
       width: 200,
       zoomWidth: 500,
@@ -141,7 +148,7 @@
       scale: 1
     };
     new ImageZoom(document.getElementById("img-container"), options);   
-  </script>
+  </script> -->
   <script src="/static/javascripts/productDetails.js"></script>
 
   <%-include('footer')-%>
