--- a/Project/views/user/productDetails.ejs
+++ b/Project/views/user/productDetails.ejs
@@ -80,7 +80,9 @@
                 <%=data.description%>
               </p>
               <ul>
-                <li>Color: <span>Black</span></li>
+                <li>Stock: <span>
+                  <%=data.stock%>
+                </span></li>
                 <li>Available: <span>in stock</span></li>
                 <li>Category: <span>
                     <%=data.category%>
