--- a/Project/views/user/profile.ejs
+++ b/Project/views/user/profile.ejs
@@ -12,11 +12,10 @@
 				</div>
 
 				<div class="shadow rounded mt-3 p-3">
-					<h6 class="fw-normal"><a href="/orders" class="text-secondary">My Orders </a></h6>
-					<h6 class="fw-normal"><a href="/address" class="text-secondary">Address</a></h6>
-					<h6 class="fw-normal"><a  class="text-secondary">Wallet <span
-					class="ms-3 text-success fw-bold"> <small>RS</small> <span><%=user.wallet%></span></span></a></h6>
-					<h6 class="fw-normal"><a href="/changepassword" class="text-secondary">Change Password</a></h6>
+					<h6 class="fw-normal"><a href="/address" class="text-secondary btn">Address</a></h6>
+					<h6 class="fw-normal"><a href="/orders" class="text-secondary btn">My Orders </a></h6>
+					<h6 class="fw-normal"><a href="/changepassword" class="text-secondary btn">Change Password</a></h6>
+					<h6 ><a  class="text-secondary btn btn-white">Wallet <span class="ms-3 text-success fw-bold "> <small>RS</small> <span><%=user.wallet%></span></span></a></h6>
 				</div>
 			</div>
 			<div class="col-md-8 ">
