--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,17 @@
-<h1><%= message %></h1>
+<!-- <h1><%= message %></h1>
 <h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<pre><%= error.stack %></pre> -->
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+   
+        <div class="d-flex align-items-center justify-content-center vh-100">
+            <div class="text-center">
+                <h1 class="display-1 fw-bold"> <%= error.status %></h1>
+                <p class="fs-3"> <span class="text-danger">Opps!</span> Page <%= message %></p>
+                <p class="lead">
+                    <%= message %>
+                  </p>
+                <a href="/" class="btn btn-primary">Go Home</a>
+            </div>
+        </div>
+    
