--- a/views/user/category.ejs
+++ b/views/user/category.ejs
@@ -50,9 +50,16 @@
                     </div>
                     <div class = "text-center">
                         <p class = "text-capitalize mt-3 mb-1"><%=element.name%></p>
-                        <span class="fw-bold d-block text-success">
-                            <del class="text-danger">Rs:<%=element.price%></del> Rs.<%=element.discountedPrice%>
-                        </span> 
+                        <%if(element.price == element.discountedPrice){%>
+                            <span class="fw-bold d-block text-success">
+                                 Rs.<%=element.discountedPrice%>
+                            </span>
+                        <%}else{%>   
+                            <span class="fw-bold d-block text-success">
+                                <del class="text-danger">Rs:<%=element.price%></del> Rs.<%=element.discountedPrice%>
+                            </span> 
+                        <%}%>    
+                        
                         <a href = "productDetails/<%=element._id%>" class = "btn btn-primary mt-3">BUY NOW</a>
                     </div>
                     
